# OpenFlomo

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CrossPlatform.md  Optimization.md  PRD.md  ProjectStructure.md
public/: version.json
scripts/: update-version.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DataModal.vue
src/components/Layout/: Heatmap.vue  TagSidebar.vue
src/components/Memo/: MemoCard.vue  MemoEditDialog.vue  MemoInput.vue  MemoList.vue
src/composables/: useToast.ts
src/i18n/: index.ts
src/locales/: en.json  ja.json  zh-CN.json
src/router/: index.ts
src/services/: database.ts
src/stores/: memoStore.ts  settingsStore.ts
src/styles/: main.scss
src/utils/: markdown.ts
src/views/: HomeView.vue  SettingsView.vue
